--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body class="body">
     <!-- ====================================== header ============================== -->
@@ -492,7 +493,7 @@
                 name="footer-user-newsletter"
                 class="footer-form-input"
                 type="email"
-                placeholder="Email" />
+                placeholder="&nbsp;Email" />
               <button type="submit" class="footer-form-btn">
                 Підписатися
                 <svg class="footer-form-icon">
