Зробів правкі в БЕМ та зробів вкладенність

--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
     <!-- ====================================== header ============================== -->
     <header class="header">
       <div class="container header__container">
-        <nav class="page-nav">
+        <nav class="nav">
           <a href="./index.html" class="logo" lang="en"
             ><span class="logo__first-part">Web</span>Studio</a
           >
-          <ul class="page-nav__list list">
-            <li class="page-nav__item">
+          <ul class="nav__list list">
+            <li class="nav__list-item">
               <a
                 href="./index.html"
-                class="link page-nav__link page-nav__link_current"
+                class="link nav__list-link nav__list-link--current"
                 >Студія</a
               >
             </li>
-            <li class="page-nav__item">
-              <a href="./portfolio.html" class="link page-nav__link"
+            <li class="nav__list-item">
+              <a href="./portfolio.html" class="link nav__list-link"
                 >Портфоліо</a
               >
             </li>
-            <li class="page-nav__item">
-              <a href="#" class="link page-nav__link">Контакти</a>
+            <li class="nav__list-item">
+              <a href="#" class="link nav__list-link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -75,48 +75,48 @@
           <h2 class="visually-hidden">наші особлівості</h2>
           <ul class="features__list list">
             <li class="features__item">
-              <div class="features__icon_item">
+              <div class="features__icon--item">
                 <svg class="features__icon">
                   <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="features__item_title">увага до деталей</h3>
-              <p class="features__item_text">
+              <h3 class="features__item--title">увага до деталей</h3>
+              <p class="features__item--text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li class="features__item">
-              <div class="features__icon_item">
+              <div class="features__icon--item">
                 <svg class="features__icon">
                   <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="features__item_title">пунктуальність</h3>
-              <p class="features__item_text">
+              <h3 class="features__item--title">пунктуальність</h3>
+              <p class="features__item--text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
             <li class="features__item">
-              <div class="features__icon_item">
+              <div class="features__icon--item">
                 <svg class="features__icon">
                   <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="features__item_title">планування</h3>
-              <p class="features__item_text">
+              <h3 class="features__item--title">планування</h3>
+              <p class="features__item--text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="features__item">
-              <div class="features__icon_item">
+              <div class="features__icon--item">
                 <svg class="features__icon">
                   <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="features__item_title">сучасні тезнології</h3>
-              <p class="features__item_text">
+              <h3 class="features__item--title">сучасні тезнології</h3>
+              <p class="features__item--text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -182,47 +182,49 @@
       <section class="team section">
         <div class="team__container container">
           <h2 class="team__title">Наша команда</h2>
-          <ul class="team__list">
-            <li class="team__item">
-              <div class="team__card">
+          <ul class="team-list">
+            <li class="team-list__item">
+              <div class="team-list__card">
                 <img
                   src="./images/photo1.jpg"
                   alt="Igor"
                   width="270"
                   height="260"
-                  class="team__photo"
+                  class="team-list__photo"
                 />
-                <div class="team__text">
-                  <h3 class="team__name">Ігор Дем'яненко</h3>
-                  <p class="team__description" lang="en">Product Designer</p>
-                  <ul class="list social__list">
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                <div class="team-list__text">
+                  <h3 class="team-list__name">Ігор Дем'яненко</h3>
+                  <p class="team-list__description" lang="en">
+                    Product Designer
+                  </p>
+                  <ul class="list social-list">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-instagram-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-twitter-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-facebook-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-linkedin-card"
                           ></use></svg
@@ -232,46 +234,48 @@
                 </div>
               </div>
             </li>
-            <li class="team__item">
-              <div class="team__card">
+            <li class="team-list__item">
+              <div class="team-list__card">
                 <img
                   src="./images/photo2.jpg"
                   alt="Igor"
                   width="270"
                   height="260"
-                  class="team__photo"
+                  class="team-list__photo"
                 />
-                <div class="team__text">
-                  <h3 class="team__name">Ольга Рєпіна</h3>
-                  <p class="team__description" lang="en">Product Designer</p>
-                  <ul class="list social__list">
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                <div class="team-list__text">
+                  <h3 class="team-list__name">Ольга Рєпіна</h3>
+                  <p class="team-list__description" lang="en">
+                    Product Designer
+                  </p>
+                  <ul class="list social-list">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-instagram-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-twitter-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-facebook-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-linkedin-card"
                           ></use></svg
@@ -281,46 +285,46 @@
                 </div>
               </div>
             </li>
-            <li class="team__item">
-              <div class="team__card">
+            <li class="team-list__item">
+              <div class="team-list__card">
                 <img
                   src="./images/photo3.jpg"
                   alt="Nicolai"
                   width="270"
                   height="260"
-                  class="team__photo"
+                  class="team-list__photo"
                 />
-                <div class="team__text">
-                  <h3 class="team__name">Микола Тарасов</h3>
-                  <p class="team__description" lang="en">Marketing</p>
-                  <ul class="list social__list">
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                <div class="team-list__text">
+                  <h3 class="team-list__name">Микола Тарасов</h3>
+                  <p class="team-list__description" lang="en">Marketing</p>
+                  <ul class="list social-list">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-instagram-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-twitter-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-facebook-card"
                           ></use></svg
                       ></a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link">
-                        <svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link">
+                        <svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-linkedin-card"
                           ></use></svg
@@ -330,49 +334,49 @@
                 </div>
               </div>
             </li>
-            <li class="team__item">
-              <div class="team__card">
+            <li class="team-list__item">
+              <div class="team-list__card">
                 <img
                   src="./images/photo4.jpg"
                   alt="Michail"
                   width="270"
                   height="260"
-                  class="team__photo"
+                  class="team-list__photo"
                 />
-                <div class="team__text">
-                  <h3 class="team__name">Михайло Єрмаков</h3>
-                  <p class="team__description" lang="en">UI Designer</p>
-                  <ul class="list social__list">
-                    <li class="social__item">
-                      <a href="" class="social__link">
-                        <svg class="social__icon">
+                <div class="team-list__text">
+                  <h3 class="team-list__name">Михайло Єрмаков</h3>
+                  <p class="team-list__description" lang="en">UI Designer</p>
+                  <ul class="list social-list">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link">
+                        <svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-instagram-card"
                           ></use>
                         </svg>
                       </a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link">
-                        <svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link">
+                        <svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-twitter-card"
                           ></use>
                         </svg>
                       </a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-facebook-card"
                           ></use>
                         </svg>
                       </a>
                     </li>
-                    <li class="social__item">
-                      <a href="" class="social__link"
-                        ><svg class="social__icon">
+                    <li class="social-list__item">
+                      <a href="" class="social-list__link"
+                        ><svg class="social-list__icon">
                           <use
                             href="./images/sprite.svg#icon-linkedin-card"
                           ></use>
