--- a/portfolio.html
+++ b/portfolio.html
@@ -17,23 +17,23 @@
     <!-- ========== header ============ -->
     <header class="header">
       <div class="container header__container">
-        <nav class="page-nav">
+        <nav class="nav">
           <a href="./index.html" class="logo" lang="en"
             ><span class="logo__first-part">Web</span>Studio</a
           >
-          <ul class="page-nav__list list">
-            <li class="page-nav__item">
-              <a href="./index.html" class="link page-nav__link">Студія</a>
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a href="./index.html" class="link nav__list-link">Студія</a>
             </li>
-            <li class="page-nav-item">
+            <li class="nav__list-item">
               <a
                 href="./portfolio.html"
-                class="link page-nav__link page-nav__link_current"
+                class="link nav__list-link nav__list-link--current"
                 >Портфоліо</a
               >
             </li>
-            <li class="page-nav__item">
-              <a href="#" class="link page-nav__link">Контакти</a>
+            <li class="nav__list-item">
+              <a href="#" class="link nav__list-link">Контакти</a>
             </li>
           </ul>
         </nav>
